Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  selector:
    app: fastapi #musi pasować do labels z deployment.yaml 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
