Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi
spec:
  rules:
    - host: k8s.projectdiploma.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  fastapi
                port:
                  number: 80
